--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-id-card-o text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Sturdy Themes</h3>
                             <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-anchor text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Up to Date</h3>
                             <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
                         </div>
@@ -88,7 +88,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-car text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Made with Love</h3>
                             <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
                         </div>
