--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-id-card-o style=color:black text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-id-card-o style=color:black"></i>
                             <h3 class="h4 mb-2">Sturdy Themes</h3>
                             <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
                         </div>
