--- a/index.html
+++ b/index.html
@@ -67,28 +67,28 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-id-card-o style=color:black mb-4"></i>
+                            <i class="fas fa-4x fa-id-card-o mb-4"></i>
                             <h3 class="h4 mb-2">Sturdy Themes</h3>
                             <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-anchor style=color:green mb-4"></i>
+                            <i class="fas fa-4x fa-anchor mb-4"></i>
                             <h3 class="h4 mb-2">Up to Date</h3>
                             <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-globe style=color:red mb-4"></i>
+                            <i class="fas fa-4x fa-globe mb-4"></i>
                             <h3 class="h4 mb-2">Ready to Publish</h3>
                             <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-car style=color:pink mb-4"></i>
+                            <i class="fas fa-4x fa-car mb-4"></i>
                             <h3 class="h4 mb-2">Made with Love</h3>
                             <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
                         </div>
