--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         </nav>
         <!-- About section-->
 <!-- Main Content Section -->
-<section class="page-section" id="main-content">
+<section class="page-section bg-primary" id="main-content">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center">
