--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<li><a href="#" class="button primary">Наша работа</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Продолжить экскурсию</a>
+						<a href="#one" class="more scrolly">Продолжить</a>
 					</section>
 
 				<!-- One -->
