--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 									<a href="#menu" class="menuToggle"><span>Меню</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Главная</a></li>
-											<li><a href="generic.html">Наши работы</a></li>
-											<li><a href="elements.html"></a>Контакт</li>
+											<li><a href="index.html">Проекты</a></li>
+											<li><a href="generic.html">Экспертиза</a></li>
+											<li><a href="elements.html">Контакт</a></li>
 										</ul>
 									</div>
 								</li>
@@ -39,12 +39,13 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>PDigital</h2>
-							<p>Дигатальное агенство<br />
-							будущего века.<br />
+							<h2>digitalv</h2>
+							<p>Дигитальное агентство<br />
+							помогающее компаниям<br />
+							создавать будущее.<br />
 							</p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Наша работа</a></li>
+								<li><a href="#" class="button primary">Наши проекты</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Продолжить</a>
