--- a/index.html
+++ b/index.html
@@ -528,8 +528,7 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="copyright">
-            &copy; Copyright Reserved to <span class="text-color">Megakit.</span> by <a href="https://themefisher.com/"
-              target="_blank">Themefisher</a>
+            &copy; Copyright Reserved to <span class="text-color">57Digital.</span></a>
           </div>
         </div>
         <div class="col-lg-6 text-left text-lg-right">
